// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`budgets pin and renderer reads with four viewers and two active owner threads (separate mounts) 1`] = `
{
  "accountingOnly": {
    "notifications": 0,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
    "renderer": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
  },
  "childDiscovery": {
    "notifications": 4,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 1240,
      "requests": 5,
      "responseBytes": 8169,
      "responseRows": 12,
      "unchanged": 4,
    },
    "renderer": {
      "diagnosticBytes": 1976,
      "requestBytes": 4432,
      "requests": 8,
      "responseBytes": 3491,
      "responseRows": 1,
      "unchanged": 7,
    },
  },
  "cold": {
    "notifications": 0,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 700,
      "requests": 4,
      "responseBytes": 24304,
      "responseRows": 44,
      "unchanged": 0,
    },
    "renderer": {
      "diagnosticBytes": 1736,
      "requestBytes": 3600,
      "requests": 8,
      "responseBytes": 6652,
      "responseRows": 8,
      "unchanged": 0,
    },
  },
  "oneWorktree": {
    "notifications": 4,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 248,
      "requests": 1,
      "responseBytes": 388,
      "responseRows": 0,
      "unchanged": 1,
    },
    "renderer": {
      "diagnosticBytes": 544,
      "requestBytes": 1158,
      "requests": 2,
      "responseBytes": 774,
      "responseRows": 0,
      "unchanged": 2,
    },
  },
  "twoActiveParents": {
    "notifications": 54,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 13392,
      "requests": 54,
      "responseBytes": 20952,
      "responseRows": 0,
      "unchanged": 54,
    },
    "renderer": {
      "diagnosticBytes": 13716,
      "requestBytes": 30294,
      "requests": 54,
      "responseBytes": 20898,
      "responseRows": 0,
      "unchanged": 54,
    },
  },
  "unrelatedSubagents": {
    "notifications": 0,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
    "renderer": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
  },
}
`;

exports[`budgets pin and renderer reads with four viewers and two active owner threads (shared mounts) 1`] = `
{
  "accountingOnly": {
    "notifications": 0,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
    "renderer": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
  },
  "childDiscovery": {
    "notifications": 4,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 2280,
      "requests": 8,
      "responseBytes": 50912,
      "responseRows": 92,
      "unchanged": 4,
    },
    "renderer": {
      "diagnosticBytes": 1976,
      "requestBytes": 4432,
      "requests": 8,
      "responseBytes": 4676,
      "responseRows": 4,
      "unchanged": 4,
    },
  },
  "cold": {
    "notifications": 0,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 848,
      "requests": 4,
      "responseBytes": 47196,
      "responseRows": 88,
      "unchanged": 0,
    },
    "renderer": {
      "diagnosticBytes": 1736,
      "requestBytes": 3600,
      "requests": 8,
      "responseBytes": 6256,
      "responseRows": 8,
      "unchanged": 0,
    },
  },
  "oneWorktree": {
    "notifications": 4,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 1140,
      "requests": 4,
      "responseBytes": 1552,
      "responseRows": 0,
      "unchanged": 4,
    },
    "renderer": {
      "diagnosticBytes": 1088,
      "requestBytes": 2316,
      "requests": 4,
      "responseBytes": 1548,
      "responseRows": 0,
      "unchanged": 4,
    },
  },
  "twoActiveParents": {
    "notifications": 216,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 61560,
      "requests": 216,
      "responseBytes": 83808,
      "responseRows": 0,
      "unchanged": 216,
    },
    "renderer": {
      "diagnosticBytes": 54864,
      "requestBytes": 121176,
      "requests": 216,
      "responseBytes": 83592,
      "responseRows": 0,
      "unchanged": 216,
    },
  },
  "unrelatedSubagents": {
    "notifications": 0,
    "pins": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
    "renderer": {
      "diagnosticBytes": 0,
      "requestBytes": 0,
      "requests": 0,
      "responseBytes": 0,
      "responseRows": 0,
      "unchanged": 0,
    },
  },
}
`;
